--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,22 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# spring.datasource.url=jdbc:h2:mem:testdb
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.username=sa
+# spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+spring.datasource.url=jdbc:mysql://localhost:3306/people?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=tatakae
+
+spring.jpa.generate-ddl=true
+sprint.jpa.show-sql=true
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.format_sql=true
+# hibernate.dialect.storage_engine=innodb
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# spring.h2.console.enabled=true
+# spring.h2.console.path=/h2-console
 
 # verifica campos marcados com "nullable = false" antes de fazer a consulta no banco de dados
 spring.jpa.properties.hibernate.check_nullability=true
