--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 
 spring.datasource.url=jdbc:mysql://localhost:3306/people?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=tatakae34
+spring.datasource.password=tatakae
 
 spring.jpa.generate-ddl=true
 sprint.jpa.show-sql=true
